# ignis-lazari

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.yaml  release.toml
.github/workflows/: publish.yml  pull_request.yml  release.yml
crates/activator-core/: Cargo.toml
crates/activator-core/src/: application.rs  bootstrapper.rs  lib.rs
crates/activator-core/src/domain/: instance.rs  mod.rs
crates/activator-core/src/http/: cors.rs  error.rs  handlers.rs  mod.rs  router.rs
crates/activator-core/src/registry/: error.rs  instance_registry.rs  mod.rs  provider_factory_registry.rs
crates/config/: Cargo.toml
crates/config/src/: error.rs  lib.rs  loader.rs  models.rs  validator.rs
crates/mock-provider/: Cargo.toml
crates/mock-provider/src/: lib.rs  mock_provider.rs  mock_provider_factory.rs
crates/oci-provider/: Cargo.toml
crates/oci-provider/src/: config.rs  lib.rs  oci_provider.rs  oci_provider_factory.rs  response.rs
crates/plugin-api/: Cargo.toml
crates/plugin-api/src/: error.rs  instance_state.rs  lib.rs  provider.rs  provider_factory.rs
crates/process-exec/: Cargo.toml
crates/process-exec/src/: error.rs  lib.rs  runner.rs
docs/: openapi.yaml
example/: config.yaml
example/instances/: website.yaml
scripts/: install.sh
