[workspace]
members = [
  "bin/activator",
  "crates/activator-core",
  "crates/plugin-api",
  "crates/config",
  "crates/mock-provider",
  "crates/process-exec",
  "crates/oci-provider",
]
resolver = "2"

[workspace.metadata.release]
publish = false
push = true
tag = true
tag-name = "v{{version}}"
tag-message = "Release {{version}}"
