[package]
name = "oci-provider"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
plugin-api = { path = "../plugin-api" }
process-exec = { path = "../process-exec" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"
thiserror = "1"
serde_json = "1"
tracing = "0.1"
